module12/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-server
  name: http-server-service
spec:
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
  selector:
    app: http-server
  type: ClusterIP
