module12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-server-80
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: mod8.vtimes.site
      http:
        paths:
          - backend:
              service:
                name: http-server-service
                port:
                  number: 80
            path: "/"
            pathType: Prefix
